--- a/assets/css/user-styles.css
+++ b/assets/css/user-styles.css
@@ -331,6 +331,14 @@ form p     {
     padding: 0.1px !important;
 }
 
+p.textarea {
+    display: block !important;
+    border: 1px;
+    padding: 10px !important;
+    left: 0;
+    right: 0;
+    margin: auto;
+}
 label { display: table-cell ;  }
 input {
     display: table-cell ;
@@ -341,6 +349,7 @@ select, .ui-selectmenu-button {
 textarea {
     display: table-cell;
     vertical-align: top;
+    width: 90%;
 }
 .sel {
     width: 60%;
