user-styles.css - added style that had been removed

--- a/assets/css/user-styles.css
+++ b/assets/css/user-styles.css
@@ -147,9 +147,11 @@ blockquote:after {
 }
 
 .hidden  {
+  display: none;
+}
+.no-display{
   display: none !important;
 }
-
 .text-content {
     padding: 50px 30px 50px 80px;
 }
