--- a/assets/css/user-styles.css
+++ b/assets/css/user-styles.css
@@ -19,17 +19,34 @@ body > #container { height: auto; min-height: 98%; }
 }
 .footer {
     clear: both;
-    position: relative;
-    z-index: 10;
-    height: 1em;
+    position: fixed;
+    z-index: 9999;
+    padding: .2em;
     margin-top: 1.5em;
     text-align: center;
     border: 0 !important;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    text-align: center;
 }
 
 .footer a {
     color: initial;
+    text-decoration: underline !important;
 }
+
+/*
+#btnTest {
+    display: flex;
+    bottom: 2em;
+    left: 0;
+    right: 0;
+    position: fixed;
+    width: 50%;
+}
+*/
+
 
 .test {
     position: absolute;
@@ -42,8 +59,8 @@ body > #container { height: auto; min-height: 98%; }
     clear: both;
     position: relative;
     z-index: 10;
-    height: 3em;
-    /*margin-top: 5em;*/
+    /*height: 3em;
+    margin-top: 5em;*/
     text-align: center;
 }
 
@@ -55,8 +72,9 @@ body > #container { height: auto; min-height: 98%; }
 .winnerTitle {
   background-color: rgba(47, 241, 9, 0.58);
 }
-#debate {
+#game_panel {
   background-color: rgba(240, 255, 10, 0.59);
+  background-image: inherit;
 }
 dt {
 	font-weight: bold;
@@ -110,14 +128,22 @@ fieldset {
 }
 
 cite {
-color: #999999;
-font-size: 14px;
-display: block;
-/*margin-top: 5px;*/
+    color: #999999;
+    font-size: 1em;
+    display: block;
+    float: right;
+    margin-bottom: 1em;
+    padding-right: 5em
 }
 
 cite:before {
 content: "\2014 \2009";
+}
+.siteQuote {
+    border-radius: 10px;
+    position: fixed;
+    right: 3.5em;
+    top: 6em;
 }
 blockquote {
   /*background: #f9f9f9;*/
@@ -146,7 +172,9 @@ blockquote:after {
     vertical-align:-.4em;
 }
 
-.hidden  {
+/* hide close button in jquery dialog */
+
+.hidden,.no-close .ui-dialog-titlebar-close{
   display: none;
 }
 .no-display{
@@ -154,6 +182,11 @@ blockquote:after {
 }
 .text-content {
     padding: 50px 30px 50px 80px;
+    position: fixed;
+    top: 15em;
+    right: 0;
+    left: 0;
+    text-align: center;
 }
 
 fieldset .pass{
@@ -174,6 +207,7 @@ label .pass {
     font-weight:bold;
     padding-left: 15px;
     float: left;
+    padding-top: 2em;
  }
 
  #welcome img {
@@ -442,6 +476,7 @@ img {
 /* game styling */
 .payPalForm {
   float: right;
+  padding-top: 2em;
 }
 
 .payPalForm form {
@@ -578,7 +613,12 @@ img {
     height: auto !important;
 }
 header[role=banner] {
-  position: relative;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  z-index: 9999;
+  width: 100%;
+  position: fixed;
   height: 50px;
 }
 header[role=banner] #cd-logo {
@@ -677,9 +717,10 @@ header[role=banner]::after {
 
 /* login styles */
 .signin-message {
+    position: fixed;
     margin: auto;
     left: 0;
-    top: 55px;
+    top: 1.5em;
     right: 0;
     display: block;
     width: 40%;
@@ -713,4 +754,5 @@ header[role=banner]::after {
     margin-left: 3%;
     margin-right: 3%;
     width: 95%;
+    padding-top: 3em;
 }
