Milestone - enable signin/signup on all pages JS Changes app - added click event for banner bar
main
- added index specific opening when arriving on page

--- a/assets/css/user-styles.css
+++ b/assets/css/user-styles.css
@@ -16,6 +16,7 @@ body > #container { height: auto; min-height: 98%; }
 
 #content {
     padding-bottom: 1em;
+    margin-bottom: 2em;
 }
 .footer {
     clear: both;
