Moved jquery plugins to their own folder Added docs folder for JSDoc documentation

--- a/assets/css/user-styles.css
+++ b/assets/css/user-styles.css
@@ -69,6 +69,7 @@ body > #container { height: auto; min-height: 98%; }
   /* padding: 50px; 
   text-align: center;*/
   width: 11.4em;
+  box-shadow: 10px 10px 5px #888888;
 }
 
 .winnerTitle {
